# Task_Manager

./: C_TaskManager_Refactoring_Guide_Updated.docx  C_TaskManager_Refactoring_Guide_Updated.md  README.md  TaskManager_BeforeAfter_Comparison.docx  TaskManager_BeforeAfter_Comparison.md  TaskManager_Refactoring_Guide.md  main.c
Version_1/: main.c
Version_2/: .clang-format  CMakeLists.txt  Implementation.md  README.md
Version_2/include/: tm_app_history.h  tm_log.h  tm_perf.h  tm_platform.h  tm_process.h  tm_startup.h  tm_types.h  tm_ui.h
Version_2/src/: main.c
Version_2/src/core/: tm_app_history.c  tm_perf.c  tm_process.c  tm_startup.c
Version_2/src/platform/: platform_posix.c  platform_win32.c
Version_2/src/ui/: ui_button.c  ui_core.c  ui_scrollbar.c  ui_tab_history.c  ui_tab_performance.c  ui_tab_processes.c  ui_tab_startup.c  ui_theme.c
Version_2/src/utils/: tm_log.c
